# project-dagster-university

course/pages/dagster-dbt/extra-credit/: 1-overview.md  2-set-up-components.md  3-dbt-component.md  4-executing-component-code.md
dagster_university/dagster_and_dbt/: pyproject.toml
dagster_university/dagster_and_dbt/dagster_and_dbt/lesson_8/: definitions.py  jobs.py  pyproject.toml
dagster_university/dagster_and_dbt/dagster_and_dbt/lesson_8/assets/: metrics.py
dagster_university/dagster_and_dbt/dagster_and_dbt/lesson_8/lesson_8/defs/jdbt/: component.yaml
dagster_university/dagster_and_dbt/dagster_and_dbt_tests/: test_lesson_8.py
dagster_university/dagster_essentials/dagster_essentials/assets/: trips.py
